--- a/src/main/resources/templates/candidate-announcement.html
+++ b/src/main/resources/templates/candidate-announcement.html
@@ -6,7 +6,7 @@
 
     {{>fragments/links}}
     <link rel="stylesheet" href="../../static/style/navigation-style.css">
-    <link rel="stylesheet" href="../../static/style/dashboard-company-style.css">
+    <link rel="stylesheet" href="../../static/style/candidate-announcement-style.css">
     <!-- Page style -->
 
 </head>
@@ -20,8 +20,8 @@
 
 </header>
 
-<main>
-    <div class="formm">
+<main style="margin-top: 80px; margin-left: 50px">
+    <div class="card" style="width: 70rem; height: 41rem;">
         <p id="page-title"><b>Candidates</b></p>
         <div class="container-fluid pt-4 table-responsive-lg">
             <div class="tableFixHead">
