--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -4,7 +4,7 @@
     <div class="position-sticky">
         <div class="list-group list-group-flush mx-3 mt-4">
 
-            <a href="/dashboard-company/{{id}}" class="list-group-item list-group-item-action py-2 ripple
+            <a href="/dashboard-company/{{id}}" class="list-group-item list-group-item-action ripple
        {{#dashboard-companyActive}}active{{/dashboard-companyActive}}" aria-current="true">
                 <i class="fas fa-chart-line fa-fw me-3"></i><span>Dashboard</span>
             </a>
