--- a/src/main/resources/static/style/profile-style.css
+++ b/src/main/resources/static/style/profile-style.css
@@ -8,70 +8,17 @@ body {
 }
 
 #page-title {
-    font-size: 1.5rem;
-}
-
-.formm {
-    box-sizing: border-box;
-    position: relative;
-    width: 70%;
-    height: 620px;
-    background: #ffffff;
-    border: 1px solid #090010;
-    border-radius: 5px;
-    font-size: 100%;
-    margin-left: 10.5%;
-    margin-top: 4.5%;
+    font-size: 2rem;
 }
 
 #myForm {
-    padding: 50px 0 0 55px;
+    padding: 5px 0 0 50px;
 }
 
-#content {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.fields, #companyName, #email, #city, #country, #phone, #firstName, #lastName {
-    box-sizing: border-box;
-
-    width: 90%;
-    height: 36px;
-    background: #FFFFFF;
-    border: 0.5px solid #E0E0E0;
-    border-radius: 8px;
-    padding-left: 8px;
-}
-
-#address, .field {
-    box-sizing: border-box;
-
-    width: 95%;
-    height: 36px;
-    background: #FFFFFF;
-    border: 0.5px solid #E0E0E0;
-    border-radius: 8px;
-    padding-left: 8px;
-}
-
-.textarea_component {
-    box-sizing: border-box;
-
-    width: 95%;
-    height: 100px;
-    resize: none;
-
-    background: #FFFFFF;
-    border: 0.5px solid #E0E0E0;
-    border-radius: 8px;
-    padding-left: 10px;
-    padding-top: 7px;
-}
 
 .editButton {
-    padding-left: 178px;
+    padding-top: 5%;
+    padding-left: 50%;
 }
 
 .error {
