--- a/src/main/resources/templates/announcement.html
+++ b/src/main/resources/templates/announcement.html
@@ -4,36 +4,26 @@
     <meta charset="UTF-8">
     <title>Jobs - Announcement</title>
 
+    <!-- Page style -->
     {{>fragments/links}}
-
-
     <link rel="stylesheet" href="../static/style/navigation-style.css">
     <link rel="stylesheet" href="../static/style/announcement-style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css">
-
-
-    <!-- Page style -->
 
 </head>
 <body>
 
 <!--Main Navigation-->
 <header>
-
     {{>fragments/sidebar}}
     {{>fragments/navbar}}
-
 </header>
-<!--Main Navigation-->
 
 <!--Main layout-->
 {{#userCompany}}
-<main>
-    <div class="formm">
+<main style="margin-top: 80px; margin-left: 50px">
+    <div class="card" style="width: 70rem; height: 41rem;">
         <p id="page-title"><b>Announcement</b></p>
-        <a type="button" href="/jobs-company/{{id}}" class="btn btn-primary" id="addAnnouncement"
+        <a type="button" href="/jobs-company/{{id}}" class="btn btn-primary btn-sm" id="addAnnouncement"
            data-mdb-target="#addAnnouncement">
             <i class="fa-solid fa-plus"></i>&nbsp;&nbsp;Add
         </a>
@@ -59,34 +49,33 @@
                     {{#announcements}}
                     <tr>
                         <td class="col1">
-                            <div>
-                                <a class="hidden-arrow fa fa-ellipsis-v"
-                                   role="button" data-mdb-toggle="dropdown" aria-expanded="false">
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                                    <li>
-                                        <button type="button" class="btn btn-sm"
-                                                data-mdb-toggle="modal"
-                                                data-mdb-target="#edit{{index}}">
-                                            <i class="fa-regular fa-pen-to-square"></i>&nbsp;Edit
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button type="button" class="btn btn-sm"
-                                                data-mdb-toggle="modal"
-                                                data-mdb-target="#delete{{index}}">
-                                            <i class="fa-regular fa-trash-can"></i>&nbsp;Delete
-                                        </button>
-                                    </li>
-                                </ul>
-                            </div>
+                            <a class="hidden-arrow fa fa-ellipsis-v" id="dropdownMenuButton"
+                               role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="min-width: 1px;">
+                                <li>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary"
+                                            id="editButton"
+                                            data-mdb-toggle="modal"
+                                            data-mdb-target="#edit{{index}}">
+                                        <i class="fa-regular fa-pen-to-square"></i>&nbsp;Edit
+                                    </button>
+                                </li>
+                                <li>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary"
+                                            data-mdb-toggle="modal"
+                                            data-mdb-target="#delete{{index}}">
+                                        <i class="fa-regular fa-trash-can"></i>&nbsp;Delete
+                                    </button>
+                                </li>
+                            </ul>
                         </td>
                         <td class="col4">{{jobName}}</td>
                         <td class="col4">{{jobType}}</td>
                         <td class="col4">{{jobLevel}}</td>
                         <td class="col4">{{dateEnded}}</td>
                         <td class="col3">{{skills}}</td>
-                        <td class="remove-description">{{description}}</td>
+                        <td class="col3 remove-description">{{description}}</td>
                         <td class="col3">{{responsability}}</td>
                         <td class="col3">{{requirement}}</td>
                         <td class="col3">{{benefit}}</td>
@@ -97,6 +86,7 @@
                                 <div class="modal-content">
                                     <form action="/edit-announcement/{{userCompany.id}}/{{id}}"
                                           method="POST"
+                                          class=" needs-validation"
                                           name="announcement">
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="editAnnouncementTitle{{index}}">
@@ -142,7 +132,8 @@
                                                     <div class="mb-3">
                                                         <label class="form-label" for="dateEnded{{index}}">End date<span
                                                                 class="error">*</span></label>
-                                                        <input type="date" id="dateEnded{{index}}" name="dateEnded" value="{{dateEnded}}"
+                                                        <input type="date" id="dateEnded{{index}}" name="dateEnded"
+                                                               value="{{dateEnded}}"
                                                                class="form-control form-control-lg" required>
                                                     </div>
                                                 </div>
@@ -258,6 +249,7 @@
         {{/userCompany}}
     </div>
 </main>
+
 
 </body>
 </html>
